--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ EMAIL: dpadua@uci.edu
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Dylan Padua">
-    <meta name="description" content="portfolio">
+    <meta name="description" content="Portfolio website for Dylan Padua">
     <title>Dylan Padua</title>
     <!-- Boostrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -53,7 +53,7 @@ EMAIL: dpadua@uci.edu
         <!-- About Section -->
         <section id="about" class="section-body">
             <h2 class="page-subhead">About Me</h2>
-            <p class="about-text section-text">
+            <p class="about-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
@@ -143,7 +143,7 @@ EMAIL: dpadua@uci.edu
     <footer class="foot-links">
         <section id="footlinks">
             <a class="nav-button link-button" href="https://www.linkedin.com/in/dylan-padua-6a9b512a7" target="_blank">LinkedIn</a>
-            <a class="nav-button link-button" href="https://github.com/dpadua6925" target="_blank">GitHub</a>
+            <a class="nav-button link-button" href="https://github.com/SgtSkippy" target="_blank">GitHub</a>
         </section>
     </footer>
 
