Fixed some issues with header/footer/email sizing.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ EMAIL: dpadua@uci.edu
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar fixed-top py-3 mb-3">
+    <nav class="navbar fixed-top">
         <h1 class="nav-home">DYLAN PADUA</h1>
         <ul class="nav-selection">
             <li>
