Added header consistency. Added icons for links.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ EMAIL: dpadua@uci.edu
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c425688fea.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -142,8 +143,12 @@ EMAIL: dpadua@uci.edu
     <!-- Footer with relevant links -->
     <footer class="foot-links">
         <section id="footlinks">
-            <a class="nav-button link-button" href="https://www.linkedin.com/in/dylan-padua-6a9b512a7" target="_blank">LinkedIn</a>
-            <a class="nav-button link-button" href="https://github.com/SgtSkippy" target="_blank">GitHub</a>
+            <a class="nav-button link-button" href="https://www.linkedin.com/in/dylan-padua-6a9b512a7" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a class="nav-button link-button" href="https://github.com/SgtSkippy" target="_blank">
+                <i class="fa-brands fa-square-github"></i>
+            </a>
         </section>
     </footer>
 
