--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@ EMAIL: dpadua@uci.edu
             <h2 class="page-subhead">Contact me</h2>
             <article id="emailcontact" class="email-body">
                 <!-- HTML form Handler-->
-                <form>
+                <form action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="5af9b7d9-dafd-4f50-a06e-32fb7fe04699">
+
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name..." required>
                     
@@ -133,6 +135,8 @@ EMAIL: dpadua@uci.edu
 
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Enter your message..." style="height:15em" required></textarea>
+
+                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
                     <input type="submit" value="Send Message">
                 </form>
