--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ EMAIL: dpadua@uci.edu
     <!-- CSS -->
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c425688fea.js" crossorigin="anonymous"></script>
+    <script>
+        window.onload = function() {
+            document.getElementById("contact-form").reset();
+        };
+    </script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -124,8 +129,10 @@ EMAIL: dpadua@uci.edu
             <h2 class="page-subhead">Contact me</h2>
             <article id="emailcontact" class="email-body">
                 <!-- HTML form Handler-->
-                <form action="https://api.web3forms.com/submit" method="POST">
+                <form action="https://api.web3forms.com/submit" method="POST" id="contact-form">
                     <input type="hidden" name="access_key" value="5af9b7d9-dafd-4f50-a06e-32fb7fe04699">
+                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                    <input type="hidden" name="subject" value="Personal Website - New Submission">
 
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name..." required>
@@ -135,8 +142,6 @@ EMAIL: dpadua@uci.edu
 
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Enter your message..." style="height:15em" required></textarea>
-
-                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
                     <input type="submit" value="Send Message">
                 </form>
