Fixed scaling issues with main section content.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ EMAIL: dpadua@uci.edu
     <!-- Introductory Page -->
     <header>
         <figure id="home" class="home-img">
-            <img src="img/selfportrait.JPG" alt="Dylan Padua">
+            <img id="selfportrait" src="img/selfportrait.JPG" alt="Dylan Padua">
         </figure>
     </header>
 
