--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@ EMAIL: dpadua@uci.edu
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top">
-        <h1 class="nav-home">DYLAN PADUA</h1>
-        <ul class="nav-selection">
-            <li>
-                <a id="aboutbtn" class="nav-button" href="#about">About</a>
-            </li>
-            <li>
-                <a id="projectbtn" class="nav-button" href="#project">Projects</a>
-            </li>
-            <li>
-                <a id="contactbtn" class="nav-button" href="#contact">Contact</a>
-            </li>
-        </ul>
+        <div class="nav-contents">
+            <h1 class="nav-home">DYLAN PADUA</h1>
+            <ul class="nav-selection">
+                <li>
+                    <a id="aboutbtn" class="nav-button" href="#about">About</a>
+                </li>
+                <li>
+                    <a id="projectbtn" class="nav-button" href="#project">Projects</a>
+                </li>
+                <li>
+                    <a id="contactbtn" class="nav-button" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <a> </a>
