Expanded projects section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <!--
 WRITTEN BY: Dylan Padua
-EMAIL: dpadua@uci.edu
 -->
 
 <head>
@@ -73,17 +72,99 @@ EMAIL: dpadua@uci.edu
         <!-- Projects Section -->
         <section id="project" class="section-body">
             <h2 class="page-subhead">Projects</h2>
-            <article id="project1" class="project-body">
+            <article id="project_template" class="project-body">
                 <section class="project-desc">
-                    <h3 class="project-head">Project #1</h3>
+                    <h3 class="project-head">Project Name</h3>
                     <h4 class="project-subtext">
-                        Project Type
+                        Project Subtext
                     </h4>
                     <p class="project-bodytext">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                         sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <section class="project-links">
+                        <a id="template_mediabtn" class="media-link" target="_blank">Media</a>
+                    </section>
+                </section>
+            </article>
+            <article id="project_searchengine" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">Search Engine</h3>
+                    <h4 class="project-subtext">
+                        Project subtext.
+                    </h4>
+                    <p class="project-bodytext">
+                        Search engine built using Python. Scrapes and handles tens of thousands of documents / web pages 
+                        under harsh operational constraints with a query response time under 300ms.
+                    </p>
+                </section>
+            </article>
+            <article id="project_starcraft" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">StarCraft Skill Level Model</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        A Bradley-Terry model built using Python. Estimates the skill level of StarCraft II players and predicts match outcomes with a 67% accuracy.
+                    </p>
+                </section>
+            </article>
+            <article id="project_sleeptracker" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">Sleep Tracker</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        Mobile application built using Ionic that allows users to log their sleep schedule and sleep quality.
+                    </p>
+                </section>
+            </article>
+            <article id="project_coachsays" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">Coach Says</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        Health-centric iOS application built using Swift. Allows users to log their food and water intake while 
+                        offering recommendations based on the data entered.
+                    </p>
+                </section>
+            </article>
+            <article id="project_spotify" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">Mock Spotify Web Browser</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        Web application built using Angular that uses a backend server written in Node.js/Express to browse music on Spotify.
+                    </p>
+                </section>
+            </article>
+            <article id="project_tweet" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">Tweet Report Website</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        Web application built using TypeScript that analyzes a series of Tweets posted from the RunKeeper app and produces a report.
+                    </p>
+                </section>
+            </article>
+            <article id="project_minesweeper" class="project-body">
+                <section class="project-desc">
+                    <h3 class="project-head">AI Minesweeper Solver</h3>
+                    <h4 class="project-subtext">
+                        Project Subtext
+                    </h4>
+                    <p class="project-bodytext">
+                        AI built using Python that plays and solves Minesweeper game boards.
                     </p>
                 </section>
             </article>
