--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@ WRITTEN BY: Dylan Padua
                         sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                     <section class="project-links">
-                        <a id="template_mediabtn" class="media-link" target="_blank">Media</a>
+                        <button id="template_mediaBtn" class="media-link" data-popup-id="template_mediaWindow">Media</a>
+                    </section>
+                    <div class="mediaWindow-overlay"></div>
+                    <section id="template_mediaWindow" class="media-window">
+                        <p>Media will be displayed here.</p>
+                        <button id="template_mediaCloseBtn" class="media-close">Close</button>
                     </section>
                 </section>
             </article>
@@ -209,5 +214,7 @@ WRITTEN BY: Dylan Padua
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- Project Media Window JS -->
+    <script src="js/media.js"></script>
 </body>
 </html>
