Added close functionality for media popup.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ WRITTEN BY: Dylan Padua
                     <section class="project-links">
                         <button id="template_mediaBtn" class="media-link" data-popup-id="template_mediaWindow">Media</a>
                     </section>
-                    <div class="mediaWindow-overlay"></div>
+                    <div id="mediaOverlay" class="mediaWindow-overlay"></div>
                     <section id="template_mediaWindow" class="media-window">
                         <p>Media will be displayed here.</p>
                         <button id="template_mediaCloseBtn" class="media-close">Close</button>
