Fixes to media window styling.

--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@ WRITTEN BY: Dylan Padua
                     </section>
                     <div id="mediaOverlay" class="mediaWindow-overlay"></div>
                     <section id="template_mediaWindow" class="media-window">
-                        <p>Media will be displayed here.</p>
-                        <button id="template_mediaCloseBtn" class="media-close">Close</button>
+                        <section id="template_mediaSpace" class="media-space">
+                            <p>Media will be displayed here.</p>
+                        </section>
+                        <section id="template_mediaPreview" class="media-previewBar">
+                            <button id="template_mediaCloseBtn" class="media-close">Close</button>
+                        </section>
                     </section>
                 </section>
             </article>
