--- a/index.html
+++ b/index.html
@@ -85,12 +85,22 @@ WRITTEN BY: Dylan Padua
                         sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                     <section class="project-links">
-                        <button id="template_mediaBtn" class="media-link" data-popup-id="template_mediaWindow">Media</a>
+                        <button id="template_mediaBtn" class="media-link" 
+                            data-project-id="project_template" data-popup-id="template_mediaWindow">Media
+                        </button>
                     </section>
                     <div id="mediaOverlay" class="mediaWindow-overlay"></div>
                     <section id="template_mediaWindow" class="media-window">
                         <section id="template_mediaSpace" class="media-space">
-                            <p>Media will be displayed here.</p>
+                            <section id="template_media" class="media-files">
+                                <img id="template_media_1" src="img/project_template/placeholder1.png" alt="Template Image 1">
+                                <img id="template_media_2" src="img/project_template/placeholder2.png" alt="Template Image 2">
+                                <img id="template_media_3" src="img/project_template/placeholder3.png" alt="Template Image 3">
+                                <img id="template_media_4" src="img/project_template/placeholder4.png" alt="Template Image 4">
+                            </section>
+                            <button class="media-button left">&lt;</button>
+                            <button class="media-button right">&gt;</button>
+                            <div class="media-dots"></div>
                         </section>
                         <section id="template_mediaPreview" class="media-previewBar">
                             <button id="template_mediaCloseBtn" class="media-close">Close</button>
