Added logic for switching between media.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ WRITTEN BY: Dylan Padua
                     <section id="template_mediaWindow" class="media-window">
                         <section id="template_mediaSpace" class="media-space">
                             <section id="template_media" class="media-files">
-                                <img id="template_media_1" src="img/project_template/placeholder1.png" alt="Template Image 1">
-                                <img id="template_media_2" src="img/project_template/placeholder2.png" alt="Template Image 2">
-                                <img id="template_media_3" src="img/project_template/placeholder3.png" alt="Template Image 3">
-                                <img id="template_media_4" src="img/project_template/placeholder4.png" alt="Template Image 4">
+                                <div><img id="template_media_1" src="img/project_template/placeholder1.png" alt="Template Image 1"></div>
+                                <div><img id="template_media_2" src="img/project_template/placeholder2.png" alt="Template Image 2"></div>
+                                <div><img id="template_media_3" src="img/project_template/placeholder3.png" alt="Template Image 3"></div>
+                                <div><img id="template_media_4" src="img/project_template/placeholder4.png" alt="Template Image 4"></div>
                             </section>
                             <button class="media-button left">&lt;</button>
                             <button class="media-button right">&gt;</button>
