--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ WRITTEN BY: Dylan Padua
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar fixed-top">
+    <nav id="navbar" class="navbar fixed-top">
         <div class="nav-contents">
             <h1 class="nav-home">DYLAN PADUA</h1>
             <ul class="nav-selection">
