--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@ WRITTEN BY: Dylan Padua
                                 <div><img id="template_media_2" src="img/project_template/placeholder2.png" alt="Template Image 2"></div>
                                 <div><img id="template_media_3" src="img/project_template/placeholder3.png" alt="Template Image 3"></div>
                                 <div><img id="template_media_4" src="img/project_template/placeholder4.png" alt="Template Image 4"></div>
+                                <div><img id="template_media_5" src="img/project_template/placeholder-1920x860.png" alt="Template Image 5"></div>
+                                <div><video id="template_media_6" controls controlslist="nodownload">
+                                    <source src="img/project_template/ForBiggerEscapes.mp4" type="video/mp4">
+                                    An error has occurred while loading the video.
+                                </video></div>
                             </section>
                             <button class="media-button left">&lt;</button>
                             <button class="media-button right">&gt;</button>
