--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@ WRITTEN BY: Dylan Padua
                     <p class="project-bodytext">
                         AI built using Python that plays and solves Minesweeper game boards.
                     </p>
+                    <section class="project-links">
+                        <button id="minesweeper_mediaBtn" class="media-link" 
+                            data-project-id="project_template" data-popup-id="minesweeper_mediaWindow">Media
+                        </button>
+                        <button id="minesweeper_githubBtn" class="media-github"
+                            onclick="window.open('about:blank', '_blank')">GitHub
+                        </button>
+                    </section>
+                    
+                    <section id="minesweeper_mediaWindow" class="media-window">
+                        <section id="minesweeper_mediaSpace" class="media-space">
+                            <section id="minesweeper_media" class="media-files">
+                                <div><video id="minesweeper_media_1" controls disablepictureinpicture controlslist="nodownload" preload="metadata">
+                                    <source src="img/project_minesweeper/AI Minesweeper Demo.mp4" type="video/mp4">
+                                    An error has occurred while loading the video.
+                                </video></div>
+                            </section>
+                            <button class="media-button left">&lt;</button>
+                            <button class="media-button right">&gt;</button>
+                            <div class="media-dots"></div>
+                        </section>
+                        <section id="minesweeper_mediaPreview" class="media-previewBar">
+                            <button id="minesweeper_mediaCloseBtn" class="media-close">Close</button>
+                        </section>
+                    </section>
                 </section>
             </article>
         </section>
