Added Coach Says & Sleep Tracker project content.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,30 @@ WRITTEN BY: Dylan Padua
                     <p class="project-bodytext">
                         Mobile application built using Ionic that allows users to log their sleep schedule and sleep quality.
                     </p>
+                    <section class="project-links">
+                        <button id="sleeptracker_mediaBtn" class="media-link" 
+                            data-project-id="project_sleetracker" data-popup-id="sleeptracker_mediaWindow">Media
+                        </button>
+                        <button id="sleeptracker_githubBtn" class="media-github"
+                            onclick="window.open('about:blank', '_blank')">GitHub
+                        </button>
+                    </section>
+                    <section id="sleeptracker_mediaWindow" class="media-window">
+                        <section id="sleeptracker_mediaSpace" class="media-space">
+                            <section id="sleeptracker_media" class="media-files">
+                                <div><video id="sleeptracker_media_1" controls disablepictureinpicture controlslist="nodownload" preload="metadata">
+                                    <source src="img/project_sleeptracker/Sleep Tracker Demo.mp4" type="video/mp4">
+                                    An error has occurred while loading the video.
+                                </video></div>
+                            </section>
+                            <button class="media-button left">&lt;</button>
+                            <button class="media-button right">&gt;</button>
+                            <div class="media-dots"></div>
+                        </section>
+                        <section id="sleeptracker_mediaPreview" class="media-previewBar">
+                            <button id="sleeptracker_mediaCloseBtn" class="media-close">Close</button>
+                        </section>
+                    </section>
                 </section>
             </article>
             <article id="project_coachsays" class="project-body">
@@ -160,6 +184,30 @@ WRITTEN BY: Dylan Padua
                         Health-centric iOS application built using Swift. Allows users to log their food and water intake while 
                         offering recommendations based on the data entered.
                     </p>
+                    <section class="project-links">
+                        <button id="coachsays_mediaBtn" class="media-link" 
+                            data-project-id="project_coachsays" data-popup-id="coachsays_mediaWindow">Media
+                        </button>
+                        <button id="coachsays_githubBtn" class="media-github"
+                            onclick="window.open('about:blank', '_blank')">GitHub
+                        </button>
+                    </section>
+                    <section id="coachsays_mediaWindow" class="media-window">
+                        <section id="coachsays_mediaSpace" class="media-space">
+                            <section id="coachsays_media" class="media-files">
+                                <div><video id="coachsays_media_1" controls disablepictureinpicture controlslist="nodownload" preload="metadata">
+                                    <source src="img/project_coachsays/Coach Says Demo.mp4" type="video/mp4">
+                                    An error has occurred while loading the video.
+                                </video></div>
+                            </section>
+                            <button class="media-button left">&lt;</button>
+                            <button class="media-button right">&gt;</button>
+                            <div class="media-dots"></div>
+                        </section>
+                        <section id="coachsays_mediaPreview" class="media-previewBar">
+                            <button id="coachsays_mediaCloseBtn" class="media-close">Close</button>
+                        </section>
+                    </section>
                 </section>
             </article>
             <article id="project_spotify" class="project-body">
