Added Starcraft project github link.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@ WRITTEN BY: Dylan Padua
                     <p class="project-bodytext">
                         A Bradley-Terry model built using Python. Estimates the skill level of StarCraft II players and predicts match outcomes with a 67% accuracy.
                     </p>
+                    <section class="project-links">
+                        <button id="template_mediaBtn" class="media-link" 
+                            data-project-id="project_template" data-popup-id="template_mediaWindow">Media
+                        </button>
+                        <button id="template_githubBtn" class="media-github"
+                            onclick="window.open('https://github.com/dpadua6925/Skill-Level-Model', '_blank')">GitHub
+                        </button>
+                    </section>
                 </section>
             </article>
             <article id="project_sleeptracker" class="project-body">
