Changed portrait in About section.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ WRITTEN BY: Dylan Padua
     <!-- Introductory Page -->
     <header>
         <figure id="home" class="home-img">
-            <img id="selfportrait" src="img/selfportrait.JPG" alt="Dylan Padua">
+            <img id="selfportrait" class="portrait" src="img/dylanpadua.jpg" alt="Dylan Padua">
         </figure>
     </header>
 
