Changed style for project section. Fixed scroll while overlay is open.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ WRITTEN BY: Dylan Padua
 
         <!-- About Section -->
         <section id="about" class="section-body">
-            <h2 class="page-subhead">About Me</h2>
+            <h2 id="about_subhead" class="page-subhead">About Me</h2>
             <p class="about-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -71,7 +71,7 @@ WRITTEN BY: Dylan Padua
 
         <!-- Projects Section -->
         <section id="project" class="section-body">
-            <h2 class="page-subhead">Projects</h2>
+            <h2 id="project_subhead" class="page-subhead">Projects</h2>
             <article id="project_template" class="project-body">
                 <section class="project-desc">
                     <h3 class="project-head">Project Name</h3>
@@ -333,7 +333,7 @@ WRITTEN BY: Dylan Padua
 
         <!-- Contact Section -->
         <section id="contact" class="section-body">
-            <h2 class="page-subhead">Contact me</h2>
+            <h2 id="contact_subhead" class="page-subhead">Contact me</h2>
             <article id="emailcontact" class="email-body">
                 <!-- HTML form Handler-->
                 <form action="https://api.web3forms.com/submit" method="POST" id="contact-form">
