Changed "About" destination to top of page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ WRITTEN BY: Dylan Padua
             <h1 class="nav-home">DYLAN PADUA</h1>
             <ul class="nav-selection">
                 <li>
-                    <a id="aboutbtn" class="nav-button" href="#about">About</a>
+                    <a id="aboutbtn" class="nav-button" href="#">About</a>
                 </li>
                 <li>
                     <a id="projectbtn" class="nav-button" href="#project">Projects</a>
