Updated About section.

--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@ WRITTEN BY: Dylan Padua
         <section id="about" class="section-body">
             <h2 id="about_subhead" class="page-subhead">About Me</h2>
             <p class="about-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
+                My name is Dylan Padua. I'm an aspiring software engineer and recent graduate from UC Irvine who loves to express their creativity through programming.
+                Aside from that, I'm also passionate about composing, performing, and teaching musical arts.
             </p>
+            <div class="about-links">
+                <a class="about-link" href="https://www.linkedin.com/in/dylan-padua-6a9b512a7" target="_blank">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a class="about-link" href="https://github.com/SgtSkippy" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
             <a id="resumebtn" class="resume-link" href="img/placeholder.png" target="_blank">Resume</a>
         </section>
 
@@ -365,6 +371,9 @@ WRITTEN BY: Dylan Padua
             <a class="nav-button link-button" href="https://github.com/SgtSkippy" target="_blank">
                 <i class="fa-brands fa-square-github"></i>
             </a>
+            <section class="copyright">
+                © 2025 Dylan Padua
+            </section>
         </section>
     </footer>
 
